apps/wormhole/frontend/overlays/dev/gateway_route_policy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: wormhole-cloud-dns-letsencrypt-production
    cert-manager.io/duration: 2160h #90 days
    cert-manager.io/renew-before: 360h #15 days
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: frontend-public-zoo-com-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-redirect-http
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: frontend
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: frontend
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: frontend
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
